--- a/views/addNote.ejs
+++ b/views/addNote.ejs
@@ -8,7 +8,7 @@
     <body>
         <h1 class="note header">
             <a href="/"><button class="new-note home">Home</button></a>
-            Update Note</h1>
+            Add Note</h1>
         <form method="POST" action="/addNote">
             <div>
                 <label for="title">Title:</label> <br>
@@ -33,7 +33,7 @@
                 
                 <label class="star" for="star">Star</label> <br>
                 <input type="checkbox" id="star" name="star"/> <br>
-                <button class="new-note" type="submit">Update</button>
+                <button class="new-note" type="submit">Add</button>
         </form>
     </body>
 
