--- a/views/updateNote.ejs
+++ b/views/updateNote.ejs
@@ -7,7 +7,7 @@
     <body>
         <h1 class="note header">
             <a href="/"><button class="new-note home">Home</button></a>
-            Add Note</h1>
+            Update Note</h1>
         <form action="/updateNote/<%= note.id %>" method="POST">
             <div >
             <label for="title">Title:</label> <br>
